<resources>
    <string name="app_name">PublicTalk</string>
    <string name="navigation_login_label">login screen</string>
    <string name="logo_icon_description">logo image</string>
    <string name="loading_text">Loading...</string>
    <string name="login_success_msg">login success!</string>
    <string name="login_error_msg_retry">login error! Please retry!</string>
    <string name="edit_profile_image">image setting</string>
    <string name="setting_profile_image_label">프로필 이미지 설정\nProfile Image Setting</string>
    <string name="email_label">이메일\n(Email)</string>
    <string name="name_label">이름\n(Name)</string>
    <string name="input_name">이름(name)</string>
    <string name="language_label">언어\n(Language)</string>
    <string name="phone_number_label">핸드폰 번호\n(Phone)</string>
    <string name="input_phone_number">핸드폰 번호(phone)</string>
    <string name="entrance">입장\n(Entrance)</string>
    <string name="navigation_setting_info_label">setting information screen</string>
    <string name="nothing_select_language_msg">Please select language.</string>
    <string name="not_required_error_msg">Please enter without spaces.</string>
    <string name="channel_name">messaging notification channel</string>
    <string name="channel_description">퍼블릭 톡 알림 채널</string>
    <string name="default_notification_channel_id">public talk notification channel</string>
    <string name="friend_list">Friends</string>
    <string name="chat_list">Chats</string>
    <string name="setting">Setting</string>
    <string name="navigation_home_label">Home Screen</string>
    <string name="navigation_friend_list_label">Friend List Screen</string>
    <string name="navigation_chat_list_label">Chat List Screen</string>
    <string name="navigation_setting_label">Setting Screen</string>
    <string name="navigation_home_activity_label">Main Screen</string>
    <string name="friend_profile_image">Profile Image</string>
    <string name="mine">Me</string>
    <string name="friend_label">Friends</string>
    <string name="exist_user_info_msg">Log in with your existing information.</string>
    <string name="icon_logo_image">logo image</string>
    <string name="navigation_splash_label">start loading Screen</string>
    <string name="navigation_start_activity_label">Start Screen</string>
    <string name="logout">Logout</string>
    <string name="chat_room_image">Chat Room Image</string>
    <string name="chat_list_item_body_sample">dsjnfajksldnfjalskdfjklashdfjlasndfuansdkfnasjdklfjsadkfljsadkfsjaldkfjksadlfjsadiofjkoaenwjrnwatasjtokkk</string>
    <string name="send">SEND</string>
    <string name="send_message_hint">Input message.</string>
    <string name="hello">hello.</string>
    <string name="time_sample">PM 1 : 40</string>
    <string name="navigation_chat_room_label">ChatRoom</string>
    <string name="delete_chat_room">Delete Chat Room</string>
    <string name="chat_room_title_sample">Steve</string>
    <string name="message_box_not_reading_count">1</string>
    <string name="empty_message_error">Please enter your message.</string>
    <string name="navigation_searching_label">SearchingFriendScreen</string>
    <string name="searching_friend">Search Friend</string>
    <string name="input_email">Input Email.</string>
    <string name="search">Search</string>
    <string name="searched_friend_profile">Searched Friend Profile Image</string>
    <string name="not_exist_user_error_msg">User not found.</string>
    <string name="find_success_user_msg">User found.</string>
    <string name="add_friend">Add friend</string>
    <string name="already_friend_msg">Already friend.</string>
    <string name="add_friend_msg">Friend added.</string>
    <string name="open_chatting_room">Chatting</string>
    <string name="delete_friend">Delete Friend</string>
    <string name="friend_info_profile_image">Friend info profile image</string>
    <string name="navigation_friend_info_label">Friend Info Screen</string>
    <string name="delete_friend_msg">Deleted Friend.</string>
    <string name="join_fail_error_msg">Member registration failed. Please check your network.</string>
    <string name="network_error_msg">Please check your network.</string>
    <string name="add_friend_error_msg">Add friend failed. Please try again after checking the network.</string>
    <string name="firebase_error_msg">An error has occurred. Please try again after checking the network.</string>
    <string name="translate_result">Translation Result</string>
    <string name="translate_result_sample">Hello.</string>
    <string name="cancel">CANCEL</string>
    <string name="translate_logo_design_description">Translate Logo Design</string>
    <string name="navigation_translate_label">Translate Screen</string>
    <string name="remove_chat_label">Do you want to delete\nthe chat room?</string>
    <string name="submit">YES</string>
    <string name="navigation_remove_chat_label">Remove Chat Screen</string>
    <string name="success_remove_chat_msg">The chat room was successfully deleted.</string>
    <string name="failure_remove_chat_msg">Deletion failed. Please try again in a few minutes.</string>
    <string name="message_send_failed_msg">Transmission failed. Please try again in a few minutes.</string>
    <string name="new_message_receive_msg">A new message has arrived.</string>
    <string name="not_translate_hint">Sentences starting with \'*\' are not translated.</string>
    <string name="my_name_label">Name</string>
    <string name="my_email_label">Email</string>
    <string name="my_language_label">Language</string>
    <string name="notification_label">Notification\nin Application</string>
    <string name="edit">Edit</string>
    <string name="notification_on_msg">In-app notifications turned on.</string>
    <string name="notification_off_msg">In-app notifications turned off..</string>
    <string name="edit_error_msg">Please try again in a few minutes.</string>
    <string name="other_user_not_friend_msg">You must add the person as a friend before you can send them a message.</string>
    <string name="offline_mode_login">You will be logged in in offline mode. Please check your network.</string>
    <string name="delete_account">Withdrawal</string>
    <string name="delete_account_msg">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_account_accept_msg">Account has been deleted.</string>
    <string name="empty_email_msg">Please enter Email.</string>
    <string name="how_to_use_label">HOW TO USE</string>
    <string name="how_to_use">1. The language inside the app is currently only supported in Korean / English.\n(Translation function separate)\n\n2. In the translation function, the language you set is translated into the language set by the other party.\n\n3. To send a message without translation, put \'*\' in front of the message.\n\n4. If you don\'t add the person as a friend, you can only send and receive chat messages.\n(The names of friends who have not been added as friends are displayed in the email.)\n\n5. Notifications set in the settings screen are notifications while the app is running, and if you want to turn off notifications outside the app, turn off the notification permission in the system settings.</string>
    <string name="close">Close</string>
</resources>