<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.skysmyoo.publictalk.ui.chat_room.ChatRoomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_translate_bg">

        <TextView
            android:id="@+id/tv_translate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_translate"
            android:text="@string/translate_result"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_translate_result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_translate_result"
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_margin="40dp"
            android:background="@drawable/bg_translate_result"
            android:padding="@dimen/margin_translate"
            android:textAlignment="center"
            android:textColor="@color/color_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_none_translate_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_translate_label"
            tools:text="@string/translate_result_sample" />

        <ImageView
            android:id="@+id/iv_translate_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/translate_logo_design_description"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_translate_label" />

        <TextView
            android:id="@+id/tv_none_translate_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_translate_hint"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/btn_translate_send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_translate_result" />

        <Button
            android:id="@+id/btn_translate_send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_translate_btn"
            android:layout_marginTop="@dimen/margin_translate"
            android:layout_marginEnd="@dimen/margin_translate_btn"
            android:backgroundTint="@color/color_submit"
            android:padding="12dp"
            android:text="@string/send"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/btn_translate_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_none_translate_hint" />

        <Button
            android:id="@+id/btn_translate_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_translate_btn"
            android:layout_marginTop="@dimen/margin_translate"
            android:layout_marginEnd="@dimen/margin_translate_btn"
            android:layout_marginBottom="@dimen/margin_translate"
            android:backgroundTint="@color/color_cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_translate_send" />

        <com.skysmyoo.publictalk.ui.loading.LoadingView
            android:id="@+id/lv_translate"
            isLoading="@{viewModel.loading}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>