<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="message"
            type="com.skysmyoo.publictalk.data.model.remote.Message" />

        <variable
            name="time"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tv_item_sender_not_reading"
            isReading="@{Boolean.valueOf(message.reading)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/message_box_not_reading_count"
            android:textColor="@color/color_text"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@id/tv_item_sender_time"
            app:layout_constraintEnd_toStartOf="@id/tv_item_sender_body" />

        <TextView
            android:id="@+id/tv_item_sender_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{time}"
            android:textColor="@color/color_text"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_item_sender_body"
            tools:text="@string/time_sample" />

        <TextView
            android:id="@+id/tv_item_sender_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_sender_message_box"
            android:maxWidth="300dp"
            android:padding="@dimen/margin_msg_box"
            android:text="@{message.body}"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hello" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>