<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="chatRoom"
            type="com.skysmyoo.publictalk.data.model.remote.ChatRoom" />

        <variable
            name="viewModel"
            type="com.skysmyoo.publictalk.ui.chat_room.ChatRoomViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/color_translate_bg">

        <TextView
            android:id="@+id/tv_remove_chat_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_remove_chat"
            android:text="@string/remove_chat_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/btn_remove_chat_submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_remove_chat_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_remove_chat"
            android:backgroundTint="@color/color_cancel"
            android:onClick="@{()-> viewModel.deleteChatRoom(chatRoom)}"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_remove_chat_label" />

        <Button
            android:id="@+id/btn_remove_chat_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_remove_chat"
            android:backgroundTint="@color/color_submit"
            android:onClick="@{()->viewModel.onCancelClick()}"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_remove_chat_submit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>